remove java9+ usage of List.of